--- a/public/stylesheets/v2/nested_navigation.css
+++ b/public/stylesheets/v2/nested_navigation.css
@@ -41,6 +41,4 @@
     background: #737373;
 }
 
-.nested-navigation-panes {
-    /*border:solid 1px lime;*/
-}
+.nested-navigation-panes { }
